# agentic_document_archiver

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agentic_archive/: __init__.py  archive_docs.py  pretty_print.py
